--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
     "semantic-release": "^21.0.3"
   },
   "release": {
-    "branches": {"master"},
+    "branches": ["master", "dev"]
+  },
+  "plugins": [
+		"@semantic-release/commit-analyzer",
+		"@semantic-release/release-notes-generator",
+    "@semantic-release/npm"
+    ]
 }
