--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "branches": ["master", "dev"]
   },
   "plugins": [
-		"@semantic-release/commit-analyzer",
-		"@semantic-release/release-notes-generator",
-    "@semantic-release/npm"
-    ]
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ]
 }
