--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "@semantic-release/github",
+  "description": "semantic-release plugin to publish a GitHub release and comment on released Pull Requests/Issues",
+  "version": "0.0.0-development",
+  "type": "module",
+  "author": "Abhijeet"
   "devDependencies": {
     "semantic-release": "^21.0.3"
   },
