--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
     "publishConfig": 
   {
-  "registry": ["https://registry.npmjs.org/"],
+  "registry": ["https://registry.npmjs.org/", "https://registry.npmjs.org/@semantic-release%2fgithub"],
   "tag": "latest",
   "access": "public",
   "provenance": true
