--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "publishConfig": 
   {
-  "registry": ["https://registry.npmjs.org/"]
+  "registry": ["https://registry.npmjs.org/"],
   "tag": "latest",
   "access": "public",
   "provenance": true
