--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           cache: npm
           node-version: lts/*
+      - run: npm config set registry https://registry.npmjs.org
       - run: npm install -g npm
       - run: npm ci
       - run: npx semantic-release
