--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
       - run: npm config set registry https://registry.npmjs.org
       - run: npm install -g npm
       - run: npm ci
+      - run: npm set //registry.npmjs.org/:_authToken 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
       - run: npx release-it
         env:
           GH_TOKEN: ${{ secrets.RELASE_GIT_TOKEN }}
