--- a/package.json
+++ b/package.json
@@ -1,30 +1,44 @@
 {
-  "name": "@semantic-release/github",
+  "name": "Abhijeet-test",
   "description": "semantic-release plugin to publish a GitHub release and comment on released Pull Requests/Issues",
   "version": "0.0.0-development",
   "type": "module",
   "author": "Abhijeet",
-  "devDependencies": {
-    "semantic-release": "^21.0.3"
-  },
   "release": {
-    "branches": ["master", "dev"]
+    "branches": [
+      "master",
+      "dev"
+    ]
   },
-  "publishConfig": 
-  {
-  "registry": "https://registry.npmjs.org/",
-  "tag": "latest",
-  "access": "public",
-  "provenance": true
-  },
-  "npm": {
-    "skipChecks": "true"
-  },
+  "npm": "true",
+  "repository": "https://github.com/Abhijeet1Jadhav/Releasedemo.git",
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/npm",
-    "@semantic-release/git",
-    "@semantic-release/github"
-  ]
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "preset": "angular",
+        "parserOpts": {
+          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
+        }
+      }
+    ],
+    [
+      "@semantic-release/release-notes-generator",
+      {
+        "preset": "angular",
+        "parserOpts": {
+          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
+        },
+        "writerOpts": {
+          "commitsSort": ["subject", "scope"]
+        }
+      }
+    ]
+  ],
+  "dependencies": {
+    "git": "^0.1.5"
+  },
+  "devDependencies": {
+    "semantic-release": "^21.0.5"
+  }
 }
